# rust-examples

./: Cargo.toml  README.md
src/: speech_to_text.rs  text_to_speech.rs
